--- a/src/libcu.tests/libcu.tests.vcxproj.filters
+++ b/src/libcu.tests/libcu.tests.vcxproj.filters
@@ -26,6 +26,24 @@
     <ClCompile Include="stddefTest.cpp" />
     <ClCompile Include="timeTest.cpp" />
     <ClCompile Include="unistdTest.cpp" />
+    <ClCompile Include="sys\sys_statTest.cpp">
+      <Filter>sys</Filter>
+    </ClCompile>
+    <ClCompile Include="sys\sys_timeTest.cpp">
+      <Filter>sys</Filter>
+    </ClCompile>
+    <ClCompile Include="ext\ext_hashTest.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="ext\ext_memfileTest.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="ext\ext_bitvecTest.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
+    <ClCompile Include="ext\ext_convertTest.cpp">
+      <Filter>ext</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -36,30 +54,23 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <CudaCompile Include="StdioTest.cu" />
-    <CudaCompile Include="StdlibTest.cu" />
-    <CudaCompile Include="ctypeTest.cu" />
-    <CudaCompile Include="errnoTest.cu" />
-    <CudaCompile Include="stdargTest.cu" />
-    <CudaCompile Include="stringTest.cu" />
-    <CudaCompile Include="fallocTest.cu" />
-    <CudaCompile Include="crtdefsTest.cu" />
-    <CudaCompile Include="direntTest.cu" />
-    <CudaCompile Include="fsystemTest.cu" />
-    <CudaCompile Include="grpTest.cu" />
-    <CudaCompile Include="pwdTest.cu" />
-    <CudaCompile Include="regexTest.cu" />
-    <CudaCompile Include="sentinelTest.cu" />
-    <CudaCompile Include="setjmpTest.cu" />
-    <CudaCompile Include="stddefTest.cu" />
-    <CudaCompile Include="timeTest.cu" />
-    <CudaCompile Include="unistdTest.cu" />
-    <CudaCompile Include="fcntlTest.cu" />
     <CudaCompile Include="libcu.tests.cu" />
+    <CudaCompile Include="sys\sys_libcu.tests.cu">
+      <Filter>sys</Filter>
+    </CudaCompile>
+    <CudaCompile Include="ext\ext_libcu.tests.cu">
+      <Filter>ext</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Properties">
       <UniqueIdentifier>{0dfe3beb-5391-4684-93d2-77f059909555}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sys">
+      <UniqueIdentifier>{ece2e6cc-7e7e-4c74-bd48-e44210ab3acb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ext">
+      <UniqueIdentifier>{93428ed7-c5ab-4716-9760-47cf68fc6460}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -71,5 +82,44 @@
     <ResourceCompile Include="app.rc">
       <Filter>Properties</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="crtdefsTest.cu" />
+    <None Include="ctypeTest.cu" />
+    <None Include="direntTest.cu" />
+    <None Include="errnoTest.cu" />
+    <None Include="fallocTest.cu" />
+    <None Include="fcntlTest.cu" />
+    <None Include="fsystemTest.cu" />
+    <None Include="grpTest.cu" />
+    <None Include="pwdTest.cu" />
+    <None Include="regexTest.cu" />
+    <None Include="sentinelTest.cu" />
+    <None Include="setjmpTest.cu" />
+    <None Include="stdargTest.cu" />
+    <None Include="stddefTest.cu" />
+    <None Include="stdioTest.cu" />
+    <None Include="stdlibTest.cu" />
+    <None Include="stringTest.cu" />
+    <None Include="timeTest.cu" />
+    <None Include="unistdTest.cu" />
+    <None Include="sys\sys_timeTest.cu">
+      <Filter>sys</Filter>
+    </None>
+    <None Include="sys\sys_statTest.cu">
+      <Filter>sys</Filter>
+    </None>
+    <None Include="ext\ext_memfileTest.cu">
+      <Filter>ext</Filter>
+    </None>
+    <None Include="ext\ext_hashTest.cu">
+      <Filter>ext</Filter>
+    </None>
+    <None Include="ext\ext_bitvecTest.cu">
+      <Filter>ext</Filter>
+    </None>
+    <None Include="ext\ext_convertTest.cu">
+      <Filter>ext</Filter>
+    </None>
   </ItemGroup>
 </Project>
