--- a/src/libcu.ext/libcu.ext.vcxproj
+++ b/src/libcu.ext/libcu.ext.vcxproj
@@ -24,12 +24,20 @@
     <ShortPlatform Condition="'$(Platform)'=='x64'">x64</ShortPlatform>
   </PropertyGroup>
   <ItemGroup>
-    <CudaCompile Include="alloc.cu" />
-    <CudaCompile Include="mutex-noop.cuh" />
-    <CudaCompile Include="mutex-unix.cu" />
-    <CudaCompile Include="mutex-win.cuh" />
+    <CudaCompile Include="alloc.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </CudaCompile>
+    <CudaCompile Include="mutex-noop.cu" />
+    <ClCompile Include="mutex-unix.c">
+      <FileType>Document</FileType>
+    </ClCompile>
+    <ClCompile Include="mutex-win.c">
+      <FileType>CppHeader</FileType>
+    </ClCompile>
     <CudaCompile Include="mutex.cu" />
-    <CudaCompile Include="vfile.cu" />
+    <CudaCompile Include="vfile.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </CudaCompile>
     <CudaCompile Include="vsystem-map.cu">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </CudaCompile>
@@ -58,13 +66,13 @@
     <None Include="libcu.ext.native.targets" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\ext\alloc.h" />
     <ClInclude Include="..\include\ext\bitvec.h" />
     <ClInclude Include="..\include\ext\convert.h" />
     <ClInclude Include="..\include\ext\math.h" />
     <ClInclude Include="..\include\ext\mutex.h" />
     <ClInclude Include="..\include\ext\status.h" />
     <ClInclude Include="..\include\ext\utf.h" />
-    <ClInclude Include="..\include\lib\sqlite_int.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F9A9EA50-AB8D-4BE3-BA66-33743EA9CF91}</ProjectGuid>
