--- a/src/libcu.ext/libcu.ext.vcxproj.filters
+++ b/src/libcu.ext/libcu.ext.vcxproj.filters
@@ -13,9 +13,7 @@
     <CudaCompile Include="vsystem-win.cu" />
     <CudaCompile Include="mutex.cu" />
     <CudaCompile Include="alloc.cu" />
-    <CudaCompile Include="mutex-noop.cuh" />
-    <CudaCompile Include="mutex-win.cuh" />
-    <CudaCompile Include="mutex-unix.cu" />
+    <CudaCompile Include="mutex-noop.cu" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libcu.ext.native.nuspec" />
@@ -28,9 +26,6 @@
     </Filter>
     <Filter Include="include\ext">
       <UniqueIdentifier>{5ac597d7-9332-41cd-8e31-4375a2b6550b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="include\lib">
-      <UniqueIdentifier>{34fb1fad-c98b-4e8f-bd3d-be9a7782677a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -52,8 +47,12 @@
     <ClInclude Include="..\include\ext\status.h">
       <Filter>include\ext</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\lib\sqlite_int.h">
-      <Filter>include\lib</Filter>
+    <ClInclude Include="..\include\ext\alloc.h">
+      <Filter>include\ext</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="mutex-win.c" />
+    <ClCompile Include="mutex-unix.c" />
   </ItemGroup>
 </Project>
