--- a/src/libcu.ext/libcu.ext.vcxproj.filters
+++ b/src/libcu.ext/libcu.ext.vcxproj.filters
@@ -4,11 +4,22 @@
     <CudaCompile Include="program.cu" />
     <CudaCompile Include="libcu.ext.cu" />
     <CudaCompile Include="convert.cu" />
-    <CudaCompile Include="vfile.cu" />
+    <CudaCompile Include="alloc.cu" />
+    <CudaCompile Include="allocmem0.cu" />
+    <CudaCompile Include="allocmem1.cu" />
+    <CudaCompile Include="global.cu" />
+    <CudaCompile Include="main.cu" />
+    <CudaCompile Include="mutex.cu" />
+    <CudaCompile Include="mutex-gpu.cu" />
+    <CudaCompile Include="mutex-noop.cu" />
+    <CudaCompile Include="random.cu" />
+    <CudaCompile Include="sentinel-vsystem.cu" />
+    <CudaCompile Include="status.cu" />
+    <CudaCompile Include="utf.cu" />
+    <CudaCompile Include="util.cu" />
     <CudaCompile Include="vsystem.cu" />
+    <CudaCompile Include="vsystem-gpu.cu" />
     <CudaCompile Include="vsystem-map.cu" />
-    <CudaCompile Include="vsystem-unix.cu" />
-    <CudaCompile Include="vsystem-win.cu" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libcu.ext.native.nuspec" />
@@ -21,6 +32,9 @@
     </Filter>
     <Filter Include="include\ext">
       <UniqueIdentifier>{5ac597d7-9332-41cd-8e31-4375a2b6550b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sqlite">
+      <UniqueIdentifier>{d7512eec-1548-45da-bb56-15271a8e2730}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -36,5 +50,60 @@
     <ClInclude Include="..\include\ext\math.h">
       <Filter>include\ext</Filter>
     </ClInclude>
+    <ClInclude Include="sentinel-vsystem.h" />
+    <ClInclude Include="..\include\ext\alloc.h">
+      <Filter>include\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ext\global.h">
+      <Filter>include\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ext\mutex.h">
+      <Filter>include\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ext\status.h">
+      <Filter>include\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ext\util.h">
+      <Filter>include\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\ext\vsystem.h">
+      <Filter>include\ext</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite\libcu.h">
+      <Filter>sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite\os.h">
+      <Filter>sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite\os_common.h">
+      <Filter>sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite\os_setup.h">
+      <Filter>sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite\sqlite3.h">
+      <Filter>sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="sqlite\sqliteInt.h">
+      <Filter>sqlite</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="mutex-unix.cpp" />
+    <ClCompile Include="mutex-win.cpp" />
+    <ClCompile Include="vsystem-unix.cpp" />
+    <ClCompile Include="vsystem-win.cpp" />
+    <ClCompile Include="sqlite\mutex_unix.c">
+      <Filter>sqlite</Filter>
+    </ClCompile>
+    <ClCompile Include="sqlite\mutex_w32.c">
+      <Filter>sqlite</Filter>
+    </ClCompile>
+    <ClCompile Include="sqlite\os_unix.c">
+      <Filter>sqlite</Filter>
+    </ClCompile>
+    <ClCompile Include="sqlite\os_win.c">
+      <Filter>sqlite</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
